src/test/resources/regression/verification/xlang/error/Array8.scala
/* Copyright 2009-2013 EPFL, Lausanne */

object Array8 {

  def foo(a: Array[Int]): Array[Int] = {
    a
  }

}
